New version 1.8.18, enable Qt5 style package

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "qtcurve-1.8.17.tar.gz": 6447ac142b149a42b23723b2e25f7575399591f7
+  qtcurve-1.8.18.tar.gz: 73046d240916d258cbb9e952ef16493ecf0cd187
