--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  qtcurve-1.8.18.tar.gz: 73046d240916d258cbb9e952ef16493ecf0cd187
+  qtcurve-1.8.18-20160713.tar.xz: 74c48b65770bfd33ba0ec4cba182ac74271d611e
