--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,1 @@
-removed_sources:
-  qtcurve-1.8.18-20160713.tar.xz: 74c48b65770bfd33ba0ec4cba182ac74271d611e
-sources:
-  qtcurve-1.8.18-20160713.tar.xz: fafcbb63f2fa8a3b2d8fb0a468cf75a0e26920f4
+qtcurve-1.9.0.tar.gz: 6053879964f4e501b7a08f88688fdace99029844
