--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,2 @@
 sources:
-qtcurve-1.9.0.tar.gz: 6053879964f4e501b7a08f88688fdace99029844
-
+qtcurve-1.9.tar.xz: 5543d7b622fedc98e3999d2d9e649db71f380572
